# nhk2024_software

./: README.md
ArduinoIDE/: nhk2024_esp32.ino  readme.txt
CubeIDE/: readme.txt
CubeIDE/NHK24_R1_F7/: .cproject  .mxproject  .project  NHK24_R1_F7.ioc  NHK24_R1_F7.launch  RoboMas Debug.launch
CubeIDE/NHK24_R1_F7/CANLib_RoboMas/CAN_C620/: C620_Control.c  CAN_C620.h
CubeIDE/NHK24_R1_F7/Core/Inc/: c620_utils.h  can_utils.h  stm32f7xx_it.h
CubeIDE/NHK24_R1_F7/Core/Src/: c620_utils.c  can.c  freertos.c  main.c  stm32f7xx_it.c  usart.c
CubeIDE/NHK24_R1_F7/Debug/: NHK24_R1_F7.elf  NHK24_R1_F7.list  NHK24_R1_F7.map  makefile  objects.list
CubeIDE/NHK24_R2_F7/: .cproject  .mxproject  .project  NHK24_R2_F7 Debug.launch  NHK24_R2_F7.ioc
CubeIDE/NHK24_R2_F7/CANLib/: README.md
CubeIDE/NHK24_R2_F7/CANLib/CAN_Air/: CAN_AirCylinder.c
CubeIDE/NHK24_R2_F7/CANLib/CAN_Main/: CAN_Main.c  CAN_Main.h
CubeIDE/NHK24_R2_F7/CANLib_RoboMas/: .project
CubeIDE/NHK24_R2_F7/CANLib_RoboMas/CAN_C620/: C620_Control.h  CAN_C620.c
CubeIDE/NHK24_R2_F7/CANLib_RoboMas/CAN_C620_Def/: CAN_C620_Def.h
CubeIDE/NHK24_R2_F7/CANLib_RoboMas/CAN_C620_System/: CAN_C620_System.c  CAN_C620_System.h
CubeIDE/NHK24_R2_F7/Core/Inc/: c620_utils.h  can_utils.h
CubeIDE/NHK24_R2_F7/Core/Src/: can_utils.c  dma.c  encoder.c  freertos.c  main.c  tim.c
CubeIDE/NHK24_R2_F7/Debug/: NHK24_R2_F7.elf  NHK24_R2_F7.list  NHK24_R2_F7.map  NHK24_R2_F7_test.elf  NHK24_R2_F7_test.list  NHK24_R2_F7_test.map  RoboMas.elf  RoboMas.list  RoboMas.map  makefile  objects.list
CubeIDE/actuator_custom_msgs/: package.xml
CubeIDE/actuator_custom_msgs/msg/: HandAirStatus.msg  ShootRoller.msg
NHK_ROS/: readme.md
NHK_ROS/R1/cpp1_nhk/: CMakeLists.txt  package.xml
NHK_ROS/R1/cpp1_nhk/config/: params_left.yaml  params_right.yaml
NHK_ROS/R1/cpp1_nhk/include/dynamixel_workbench_toolbox/: dynamixel_workbench.h
NHK_ROS/R1/cpp1_nhk/src/: auto_launch_node.cpp  calc_distance_node.cpp  calc_pos_node.cpp  control_node.cpp  dynamixel_node.cpp  imu_pub_node.cpp  move_certain_node.cpp  r1_base_node.cpp  take_rice_node.cpp
NHK_ROS/R1/py1_nhk/: package.xml  setup.cfg  setup.py
NHK_ROS/R1/py1_nhk/launch/: joy.launch.py  left_lidar_eth.launch.py  r1.launch.py  (+1 more)
NHK_ROS/R2/cpp2_nhk/: CMakeLists.txt  package.xml
NHK_ROS/R2/cpp2_nhk/config/: main_bt.xml  params_right.yaml.old
NHK_ROS/R2/cpp2_nhk/include/: action_node.hpp  ros_node.hpp
NHK_ROS/R2/cpp2_nhk/src/: arm_control_node.cpp  arm_dxl_node.cpp  ascend_slope_node.cpp  bt_node.cpp  get_ball_node.cpp  line_trace_node.cpp.text  line_trace_node_doc.md  move_target_node.cpp  pan_tilt_node.cpp  put_ball_node.cpp  r2_base_node.cpp  select_ball_node.cpp
NHK_ROS/R2/cpp2_nhk/src/test/: imu_visualize.cpp  joy_control_test.cpp  pantilt_control_joy.cpp  test_node1.cpp  test_node2.cpp
NHK_ROS/R2/py2_nhk/: package.xml  setup.cfg  setup.py
NHK_ROS/actuator_custom_msgs/: CMakeLists.txt
NHK_ROS/actuator_custom_msgs/action/: CallAscendSlope.action  CallAutoLaunch.action  CallGetBall.action  CallLineTrace.action  CallMoveCertain.action  CallPutBall.action  CallTakeRice.action  GetBallCoord.action  SetMoveTarget.action
NHK_ROS/actuator_custom_msgs/msg/: ArmControl.msg  HandAirStatus.msg  SetPosition.msg  ShootAirStatus.msg  ShootRoller.msg
NHK_ROS/actuator_custom_msgs/srv/: GetPosition.srv  GetSiloState.srv  SetTableRad.srv  StartCalcPos.srv
Unity/: .gitignore  readme.md
Unity/RobotSimMR/: Assembly-CSharp-Editor.csproj  Assembly-CSharp.csproj  RobotSimMR.sln
Unity/RobotSimMR/Assets/: CommonPhysics.physicMaterial  OVRControllerPrefab Variant.prefab
Unity/RobotSimMR/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  QualitySettings.asset  TagManager.asset
WorkSpace/: 3axis_sim.py  ball_detect_test.ipynb  ball_mapping_sim.ipynb  calc_duty_test.py  detect_corner_test.ipynb  detect_corner_test2.ipynb  get_csv.py  particle_filter_test.py  readme.md
WorkSpace/hsv_test/: hsv_test.ipynb
WorkSpace/silo_rl_workspace/: game_sim.ipynb  game_sim.py
WorkSpace/yolo_finetuning/: fine_tuning.ipynb  fix.py  mp4_test.ipynb  test.txt
WorkSpace/yolo_finetuning/all_ball_dataset/: data.yaml
WorkSpace/yolo_finetuning/blue_ball_dataset/: classes.txt  data.yaml  notes.json
WorkSpace/yolo_finetuning/blue_video/: .gitignore
WorkSpace/yolo_finetuning/purple_video/: .gitignore
rosbag/erea2/: metadata.yaml
rosbag/erea3/: metadata.yaml
(+432 files in other folders)
